2008-02-26  Sam Steingold  <sds@gnu.org>

	* spvw_debug.d (DEBUG_SPVW_ASSERT): print the failed assertion
	before abort() both as is and with expanded macros

2008-02-25  Sam Steingold  <sds@gnu.org>

	* Makefile.devel (src/m4/gtk-2.0.m4): use wget instead of svn
	* autogen.sh: svn is no longer required, let us keep it this way!

2008-02-24  Sam Steingold  <sds@gnu.org>

	* configure (info_help): use ./src/configure to get the list
	of options which specify location of dependencies

2008-02-24  Sam Steingold  <sds@gnu.org>

	* Makefile.devel (GNULIB_CHECKOUT): do not specialize
	on a specific user, one can always use a symlink

2008-02-24  Bruno Haible  <bruno@clisp.org>

	* configure (info_help): Mention the --with[out]-lib*-prefix options.
	Sort the other options like autoconf does.

2008-02-24  Bruno Haible  <bruno@clisp.org>

	* autogen.sh: New file.
	* Makefile.devel (build-prerequisites): New target.
	(all): Depend on it.
	(EXCLUDE): Exclude autogen.sh.
	* utils/fix-perms.sh: Ensure autogen.sh is executable.

2008-02-24  Bruno Haible  <bruno@clisp.org>

	* Makefile.devel (GTK2_SVN_ROOT): New variable.
	(src/m4/gtk-2.0.m4): New rule.
	(src/aclocal.m4): Depend on it.

2008-02-24  Bruno Haible  <bruno@clisp.org>

	* makemake.in (COPYRIGHT.rtf): Fix escaping.

2008-02-24  Bruno Haible  <bruno@clisp.org>

	Make it easier to update the gnulib imported files.
	* Makefile.devel (GNULIB_CVS_ROOT, GNULIB_CVS_REPOSITORY): New
	variables.
	(GNULIB_CHECKOUT): Renamed from GNULIB_HOME. Make it normally a
	subdirectory of the current directory.
	(update-gnulib): New rule.
	(build-aux-update): Depend on it.
	(gnulib-imported): Rename from gnulib-update.

2008-02-24  Bruno Haible  <bruno@clisp.org>

	* Makefile.devel (build-aux-update): Pass option -d to 'cvs update'.
	Remove unportable 'cd -' command.

2008-02-24  Bruno Haible  <bruno@clisp.org>

	Add rule for fetching a working libtool.m4.
	* build-aux/ltmain.sh: Remove file.